--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
 <head>
   <!-- META TAGS OPEN GRAPH -->
-<meta property="og:title" content="Invenwear - Gestión de tiendas de ropa" />
-<meta property="og:description" content="App para escanear, registrar y controlar stock de ropa en tiendas pequeñas." />
-<meta property="og:image" content="https://tusitio.vercel.app/img/preview.jpg" />
-<meta property="og:url" content="https://tusitio.vercel.app" />
+<meta property="og:title" content="Portfolio - Allan Pongetti" />
+<meta property="og:description" content="Portfolio de Allan Pongetti" />
+<meta property="og:image" content="https://portfolio-allan-one.vercel.app/img/preview.jpg" />
+<meta property="og:url" content="https://portfolio-allan-one.vercel.app" />
 <meta property="og:type" content="website" />
 
 <meta charset="UTF-8" />
