--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- META TAGS OPEN GRAPH -->
 <meta property="og:title" content="Portfolio - Allan Pongetti" />
 <meta property="og:description" content="Portfolio de Allan Pongetti" />
-<meta property="og:image" content="https://portfolio-allan-one.vercel.app/img/preview.jpg" />
+<meta property="og:image" content="https://portfolio-allan-one.vercel.app/img/preview.png" />
 <meta property="og:url" content="https://portfolio-allan-one.vercel.app" />
 <meta property="og:type" content="website" />
 
