--- a/index.html
+++ b/index.html
@@ -227,6 +227,34 @@ section {
       </div>
     </div>
 
+<!-- Tarjeta de proyecto Cami Ribeiro -->
+<div class="bg-[#6e0f0f] rounded-xl p-4 text-white hover:scale-105 transition duration-300 cursor-pointer 
+            hover:shadow-[0_0_10px_2px_rgba(110,15,15,0.8)]" 
+     role="button" tabindex="0" aria-label="Abrir detalles del proyecto Cami Ribeiro"
+     onkeypress="if(event.key==='Enter'){mostrarModal('modalCamiRibeiro')}" 
+     onclick="mostrarModal('modalCamiRibeiro')">
+  
+  <!-- Imagen -->
+  <img src="img/logomila.jpeg" alt="Proyecto Cami Ribeiro"
+       class="rounded-lg w-full h-36 object-cover mb-3" />
+
+  <!-- Título -->
+  <h3 class="text-lg font-semibold text-white mb-1">Cami Ribeiro</h3>
+
+  <!-- Descripción -->
+  <p class="text-gray-300 text-sm mb-3">
+    Aplicación web desarrollada con Angular y TypeScript para la gestión y presentación de productos de moda.
+  </p>
+
+  <!-- Tecnologías -->
+  <div class="flex flex-wrap gap-2 text-xs text-white">
+    <span class="bg-black/30 px-2 py-1 rounded-md border border-white/10">Angular</span>
+    <span class="bg-black/30 px-2 py-1 rounded-md border border-white/10">TypeScript</span>
+    <span class="bg-black/30 px-2 py-1 rounded-md border border-white/10">HTML</span>
+    <span class="bg-black/30 px-2 py-1 rounded-md border border-white/10">CSS</span>
+  </div>
+</div>
+
   </div>
 </section>
 
@@ -270,6 +298,74 @@ section {
 
   </div>
 </div>
+<!-- MODAL CAMI RIBEIRO -->
+<div id="modalCamiRibeiro" class="fixed inset-0 bg-black bg-opacity-70 flex items-center justify-center z-50 hidden">
+  <div class="rounded-xl p-6 max-w-4xl w-full relative" style="background-color: rgba(110, 15, 15, 0.5);">
+
+    <!-- Botón cerrar -->
+    <button class="absolute top-3 right-4 text-white text-2xl font-bold hover:text-red-400" 
+      aria-label="Cerrar modal Cami Ribeiro" 
+      onClick="cerrarModal('modalCamiRibeiro')">&times;</button>
+
+    <!-- Título -->
+    <h3 class="text-2xl font-bold text-white">Cami Ribeiro</h3>
+
+    <p class="mb-4 text-gray-300">
+      Página web de Cami Ribeiro desarrollada con Angular y TypeScript. 
+      Puedes interactuar con la preview o visitar la web completa.
+    </p>
+
+       <h4 class="font-semibold text-lg text-white">Herramientas utilizadas:</h4>
+    <div class="flex items-center gap-4 flex-wrap mt-3">
+      <div class="bg-black rounded-full p-2 hover:scale-110 hover:bg-red-600 transition">
+        <img src="img/angular.svg" alt="Angular" class="w-8 h-8" />
+      </div>
+      <div class="bg-black rounded-full p-2 hover:scale-110 hover:bg-blue-600 transition">
+        <img src="img/typescript.svg" alt="TypeScript" class="w-8 h-8" />
+      </div>
+      <div class="bg-black rounded-full p-2 hover:scale-110 hover:bg-orange-600 transition">
+        <img src="img/html5.svg" alt="HTML" class="w-8 h-8" />
+      </div>
+      <div class="bg-black rounded-full p-2 hover:scale-110 hover:bg-sky-600 transition">
+        <img src="img/css.svg" alt="CSS" class="w-8 h-8" />
+      </div>
+    </div>
+
+    <h4 class="font-semibold text-lg text-white">Vista previa interactiva:</h4>
+
+    <!-- Iframe de la web -->
+    <div class="mt-2 w-full h-96 rounded-lg overflow-hidden border-2 border-white/20 cursor-pointer hover:border-red-500 transition">
+      <iframe src="https://cami-ribeiro.vercel.app" 
+              class="w-full h-full" 
+              frameborder="0" 
+              onclick="window.open('https://cami-ribeiro.vercel.app', '_blank')">
+      </iframe>
+    </div>
+
+    <!-- Botones: GitHub + Página -->
+    <div class="mt-6 flex justify-center gap-6">
+
+      <!-- GitHub -->
+      <a href="https://github.com/Orochisuu/cami-ribeiro.git" target="_blank" rel="noopener noreferrer">
+        <div class="bg-black rounded-full p-2 hover:scale-110 hover:bg-blue-600 transition flex items-center justify-center">
+          <img src="img/github.svg" alt="GitHub" class="w-8 h-8" />
+        </div>
+      </a>
+
+      <!-- Ir a la página -->
+      <a href="https://cami-ribeiro.vercel.app" target="_blank" rel="noopener noreferrer">
+        <div class="bg-black rounded-full p-2 hover:scale-110 hover:bg-green-600 transition flex items-center justify-center">
+          <img src="img/external-link.svg" alt="Ir a la web" class="w-8 h-8" />
+        </div>
+      </a>
+
+    </div>
+
+  </div>
+</div>
+
+
+
 
 <!-- SOBRE MÍ -->
 <section id="sobre-mi" class="bg-black flex flex-col md:flex-row justify-center items-center p-6 text-center md:text-left gap-8">
@@ -288,7 +384,7 @@ section {
     </div>
 
     <!-- Botón para descargar CV -->
-    <a href="docs/Cv Allan Pongetti Desarrollador Junior.pdf" download class="bg-[#6e0f0f] hover:bg-red-700 text-white font-semibold py-2 px-6 rounded-lg shadow-lg transition transform hover:scale-105">
+    <a href="docs/Cv Programador junior Allan Pongetti.pdf" download class="bg-[#6e0f0f] hover:bg-red-700 text-white font-semibold py-2 px-6 rounded-lg shadow-lg transition transform hover:scale-105">
       Descargar CV
     </a>
   </div>
@@ -303,17 +399,20 @@ section {
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-5xl mx-auto">
       
       <!-- FRONT-END -->
-      <div style="background-color: #6e0f0f;" 
-           class="text-white rounded-xl p-6 shadow-lg transform transition duration-300 
-                  hover:scale-105 hover:shadow-[0_0_15px_4px_rgba(110,15,15,0.9)] 
-                  flex flex-col items-center justify-center text-center">
-        <h3 class="font-bold text-xl mb-4">FRONT-END</h3>
-        <div class="flex gap-6">
-          <img src="img/html5.svg" alt="HTML" class="w-12 h-12" />
-          <img src="img/css.svg" alt="CSS" class="w-12 h-12" />
-          <img src="img/javascript.svg" alt="JavaScript" class="w-12 h-12" />
-        </div>
-      </div>
+<div style="background-color: #6e0f0f;" 
+     class="text-white rounded-xl p-6 shadow-lg transform transition duration-300 
+            hover:scale-105 hover:shadow-[0_0_15px_4px_rgba(110,15,15,0.9)] 
+            flex flex-col items-center justify-center text-center">
+  <h3 class="font-bold text-xl mb-4">FRONT-END</h3>
+  <div class="flex flex-wrap gap-6 justify-center">
+    <img src="img/html5.svg" alt="HTML" class="w-12 h-12" />
+    <img src="img/css.svg" alt="CSS" class="w-12 h-12" />
+    <img src="img/javascript.svg" alt="JavaScript" class="w-12 h-12" />
+    <img src="img/typescript.svg" alt="TypeScript" class="w-12 h-12" />
+    <img src="img/angular.svg" alt="Angular" class="w-12 h-12" />
+  </div>
+</div>
+
 
       <!-- BACK-END -->
       <div style="background-color: #6e0f0f;" 
